--- a/02/index-text.html
+++ b/02/index-text.html
@@ -4,6 +4,21 @@
 	<title>온라인 프로필</title>
 	<meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
+    <style> /* index-table 실습 */
+        table {
+            width: 70%; /* 표의 넓이 */
+            border: 1px solid #222; /* 1픽셀짜리 표 테두리 */
+            border-collapse: collapse; /*?? 중복되는 표와 셀의 테투리를 한 줄로 표시??? */
+        }
+        thead {
+            background: #eee; /* 제목 행의 배경색*/
+        }
+        th, td {
+            border: 1px solid #ccc;
+            padding: 5px; /* 셀 테두리와 셀 내용 사이의 여백 */
+            font-size: 0.8em;
+        }
+    </style>
 </head>
 
 <body>
@@ -22,14 +37,14 @@
             </div>        
         </aside> -->
         <div id="main">
-            <!-- 자기 소개 -->
+            <!-- 자기 소개 : index-text 실습 -->
             <section>
                 <h2 class="subtitle">Who am I?</h2>
                 <p><mark>개발을 공부하고 있습니다.</mark>
                 <br>코로나로 인해 집에서 혼자 공부합니다.</p>
             </section>
 
-            <!-- 경력 -->
+            <!-- 경력 : index-text 실습 -->
             <section>
                 <h2 class="subtitle">Experience</h2>
                 <ul>
@@ -57,10 +72,34 @@
 
             </section>
 
-            <!-- 학력 -->
+            <!-- 학력 : index-table 실습 -->
             <section>
                 <h2 class="subtitle">Education</h2>
-
+                <table>
+                    <caption>Educational History</caption>
+                    <thead>
+                        <tr>
+                            <th>School</th>
+                            <th>Major</th>
+                            <th>Period</th>
+                            <th>State</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Xxxxx Univ</td>
+                            <td>Computer Engineering</td>
+                            <td>2004.3 ~ 2008.2</td>
+                            <td>Graduated</td>
+                        </tr>
+                        <tr>
+                            <td>Ooooo High School</td>
+                            <td> - </td>
+                            <td>2001.3 ~ 2004.2</td>
+                            <td>Graduated</td>
+                        </tr>
+                    </tbody>
+                </table>
             </section>
         </div>        
     </div>
